fixed scrollbar and style

--- a/mediata-ui/src/components/layouts/main-layout.module.scss
+++ b/mediata-ui/src/components/layouts/main-layout.module.scss
@@ -1,8 +1,22 @@
+.layout {
+  height: 100vh;
+}
+
 .headerStyle {
   padding: 0 10px;
   height: 50px;
+  position: sticky;
+  top: 0;
+  z-index: 9;
+  background-color: #f5f5f5;
 }
 
 .content {
-  padding: 10px;
+  overflow-y: auto;
+  height: 100vh;
+}
+
+.sideMenu {
+  overflow-y: auto;
+  height: 100vh;
 }
